--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -10,7 +10,9 @@ jobs:
     - uses: actions/checkout@v2
 
     - name: Install
-      run: sudo apt install libvulkan-dev vulkan-validationlayers-dev
+      run: |
+        sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
+        sudo apt-get install -y libvulkan-dev vulkan-validationlayers-dev
 
     - name: Generate
       run: cmake . -B.build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=gcc-9 -DCMAKE_CXX_COMPILER=g++-9
