--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -11,8 +11,7 @@ jobs:
 
     - name: Install
       run: |
-        sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev
-        sudo apt-get install -y libvulkan-dev vulkan-validationlayers-dev
+        sudo apt-get install -y libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev libvulkan-dev
 
     - name: Generate
       run: cmake . -B.build -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=gcc-9 -DCMAKE_CXX_COMPILER=g++-9
