updated windows CI

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -12,9 +12,9 @@ jobs:
     - name: Install Vulkan
       run: |
         curl https://sdk.lunarg.com/sdk/download/latest/windows/vulkan-sdk.exe --output vulkan-sdk.exe
-        ls -la
+        dir
         ./vulkan-sdk.exe /S
-        ls -la
+        dir
 
     - name: Generate
       run: cmake . -B.build -DCMAKE_BUILD_TYPE=Debug
