renamed to dubu_gfx

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.16)
 
-project("dubu_vk" C CXX)
+project("dubu_gfx" C CXX)
 
 include("cmake/prevent_in_source_builds.cmake")
 include("cmake/standard_project_setup.cmake")
@@ -17,14 +17,14 @@ option(${PROJECT_NAME}_BUILD_TESTS
     ON)
 
 include("thirdparty/vulkan.cmake")
-add_subdirectory("dubu_vk")
+add_subdirectory("dubu_gfx")
 
 if(${${PROJECT_NAME}_BUILD_TESTS})
     #enable_testing()
     #include(GoogleTest)
     #include("thirdparty/googletest.cmake")
     include("thirdparty/dubu_window.cmake")
-    add_subdirectory("dubu_vk_test")
+    add_subdirectory("dubu_gfx_test")
 endif()
 
 if(TARGET uninstall)
