--- a/dubu_gfx_test/CMakeLists.txt
+++ b/dubu_gfx_test/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(target_name "dubu_vk_test")
+set(target_name "dubu_gfx_test")
 
 set(src_files
     "src/Application.cpp"
@@ -9,6 +9,6 @@ add_executable(${target_name} ${src_files})
 
 target_link_libraries(${target_name}
     dubu_window
-    dubu_vk)
+    dubu_gfx)
 
 set_target_properties(${target_name} PROPERTIES FOLDER ${${PROJECT_NAME}_FOLDER}/test)
