--- a/dubu_gfx/CMakeLists.txt
+++ b/dubu_gfx/CMakeLists.txt
@@ -1,19 +1,21 @@
-set(target_name "dubu_vk")
+set(target_name "dubu_gfx")
 
 set(src_precompiled
-    "src/dubu_vk/precompiled.h")
+    "src/dubu_gfx/precompiled.h")
 
 set(src_vulkan
-    "src/dubu_vk/vulkan/Framework.cpp"
-    "src/dubu_vk/vulkan/Framework.h")
+    "src/dubu_gfx/vulkan/QueueFamilyIndices.cpp"
+    "src/dubu_gfx/vulkan/QueueFamilyIndices.h"
+    "src/dubu_gfx/vulkan/Framework.cpp"
+    "src/dubu_gfx/vulkan/Framework.h")
 
-set(src_dubu_vk
-    "src/dubu_vk/dubu_vk.h")
+set(src_dubu_gfx
+    "src/dubu_gfx/dubu_gfx.h")
 
 set(src_files
     ${src_precompiled}
     ${src_vulkan}
-    ${src_dubu_vk})
+    ${src_dubu_gfx})
 
 # Project
 add_library(${target_name} STATIC ${src_files})
@@ -28,7 +30,7 @@ target_precompile_headers(${target_name} PUBLIC ${src_precompiled})
 target_include_directories( ${target_name} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
-source_group("src" FILES ${src_dubu_vk})
+source_group("src" FILES ${src_dubu_gfx})
 source_group("src/vulkan" FILES ${src_vulkan})
 source_group("src/precompiled" FILES ${src_precompiled})
 source_group("src/precompiled" REGULAR_EXPRESSION "cmake_pch\.[ch]xx")
