created some more wrappers

--- a/dubu_gfx/CMakeLists.txt
+++ b/dubu_gfx/CMakeLists.txt
@@ -6,12 +6,22 @@ set(src_precompiled
 set(src_vulkan
     "src/dubu_gfx/vulkan/Device.cpp"
     "src/dubu_gfx/vulkan/Device.h"
+    "src/dubu_gfx/vulkan/DynamicState.cpp"
+    "src/dubu_gfx/vulkan/DynamicState.h"
+    "src/dubu_gfx/vulkan/GraphicsPipeline.cpp"
+    "src/dubu_gfx/vulkan/GraphicsPipeline.h"
     "src/dubu_gfx/vulkan/Surface.cpp"
     "src/dubu_gfx/vulkan/Surface.h"
+    "src/dubu_gfx/vulkan/Shader.cpp"
+    "src/dubu_gfx/vulkan/Shader.h"
     "src/dubu_gfx/vulkan/ShaderModule.cpp"
     "src/dubu_gfx/vulkan/ShaderModule.h"
     "src/dubu_gfx/vulkan/Swapchain.cpp"
     "src/dubu_gfx/vulkan/Swapchain.h"
+    "src/dubu_gfx/vulkan/RenderPass.cpp"
+    "src/dubu_gfx/vulkan/RenderPass.h"
+    "src/dubu_gfx/vulkan/ViewportState.cpp"
+    "src/dubu_gfx/vulkan/ViewportState.h"
     "src/dubu_gfx/vulkan/Instance.cpp"
     "src/dubu_gfx/vulkan/Instance.h"
     "src/dubu_gfx/vulkan/QueueFamilyIndices.cpp"
