--- a/dubu_gfx_test/CMakeLists.txt
+++ b/dubu_gfx_test/CMakeLists.txt
@@ -9,7 +9,8 @@ add_executable(${target_name} ${src_files})
 
 target_link_libraries(${target_name}
     dubu_window
-    dubu_gfx)
+    dubu_gfx
+    imgui)
 
 set_target_properties(${target_name} PROPERTIES
     FOLDER ${${PROJECT_NAME}_FOLDER}/test
