--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ option(${PROJECT_NAME}_BUILD_TESTS
     ON)
 
 include("thirdparty/vulkan.cmake")
+include("thirdparty/dubu_log.cmake")
 add_subdirectory("dubu_gfx")
 
 if(${${PROJECT_NAME}_BUILD_TESTS})
