added imgui to test application (#2)
* added imgui to test

* GLFW_INCLUDE_NONE

* moved GLFW_INCLUDE_NONE definitions to cmake

* added borders

* updated imgui windows when main window is minimized

* added dubu log

* replaced throws with DUBU_LOG_FATAL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ option(${PROJECT_NAME}_BUILD_TESTS
     ON)
 
 include("thirdparty/vulkan.cmake")
+include("thirdparty/dubu_log.cmake")
 add_subdirectory("dubu_gfx")
 
 if(${${PROJECT_NAME}_BUILD_TESTS})
@@ -24,6 +25,7 @@ if(${${PROJECT_NAME}_BUILD_TESTS})
     #include(GoogleTest)
     #include("thirdparty/googletest.cmake")
     include("thirdparty/dubu_window.cmake")
+    include("thirdparty/imgui.cmake")
     add_subdirectory("dubu_gfx_test")
 endif()
 
