--- a/dubu_gfx/CMakeLists.txt
+++ b/dubu_gfx/CMakeLists.txt
@@ -12,6 +12,10 @@ set(src_vulkan
     "src/dubu_gfx/vulkan/CommandPool.h"
     "src/dubu_gfx/vulkan/DescriptorPool.cpp"
     "src/dubu_gfx/vulkan/DescriptorPool.h"
+    "src/dubu_gfx/vulkan/DescriptorSet.cpp"
+    "src/dubu_gfx/vulkan/DescriptorSet.h"
+    "src/dubu_gfx/vulkan/DescriptorSetLayout.cpp"
+    "src/dubu_gfx/vulkan/DescriptorSetLayout.h"
     "src/dubu_gfx/vulkan/Device.cpp"
     "src/dubu_gfx/vulkan/Device.h"
     "src/dubu_gfx/vulkan/DrawingCommand.cpp"
