--- a/dubu_gfx/CMakeLists.txt
+++ b/dubu_gfx/CMakeLists.txt
@@ -18,6 +18,8 @@ set(src_vulkan
     "src/dubu_gfx/vulkan/DescriptorSetLayout.h"
     "src/dubu_gfx/vulkan/Device.cpp"
     "src/dubu_gfx/vulkan/Device.h"
+    "src/dubu_gfx/vulkan/DeviceMemory.cpp"
+    "src/dubu_gfx/vulkan/DeviceMemory.h"
     "src/dubu_gfx/vulkan/DrawingCommand.cpp"
     "src/dubu_gfx/vulkan/DrawingCommand.h"
     "src/dubu_gfx/vulkan/DrawingCommands.h"
@@ -27,12 +29,16 @@ set(src_vulkan
     "src/dubu_gfx/vulkan/Framebuffer.h"
     "src/dubu_gfx/vulkan/GraphicsPipeline.cpp"
     "src/dubu_gfx/vulkan/GraphicsPipeline.h"
+    "src/dubu_gfx/vulkan/Image.cpp"
+    "src/dubu_gfx/vulkan/Image.h"
     "src/dubu_gfx/vulkan/Instance.cpp"
     "src/dubu_gfx/vulkan/Instance.h"
     "src/dubu_gfx/vulkan/QueueFamilyIndices.cpp"
     "src/dubu_gfx/vulkan/QueueFamilyIndices.h"
     "src/dubu_gfx/vulkan/RenderPass.cpp"
     "src/dubu_gfx/vulkan/RenderPass.h"
+    "src/dubu_gfx/vulkan/Sampler.cpp"
+    "src/dubu_gfx/vulkan/Sampler.h"
     "src/dubu_gfx/vulkan/Shader.cpp"
     "src/dubu_gfx/vulkan/Shader.h"
     "src/dubu_gfx/vulkan/ShaderModule.cpp"
