--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ if(${${PROJECT_NAME}_BUILD_TESTS})
     include("thirdparty/imgui.cmake")
     include("thirdparty/glm.cmake")
     include("thirdparty/stb.cmake")
+    include("thirdparty/assimp.cmake")
     add_subdirectory("dubu_gfx_test")
 endif()
 
